feat: update endpoint to accept list of school types names
feat: update types
